uitwerking van opdracht

--- a/toernooi.html
+++ b/toernooi.html
@@ -9,8 +9,8 @@
 <body>
 <h1>1V1</h1>
 <h2>wedstrijden</h2>
-<h3> <span style="margin-right:300px">tijd:</span> 
-	<span style="margin-right:600px">namen:</span>
+<h3> <span>tijd:</span> 
+	<span1>namen:</span1>
 	<span>winnaar:</span>
                   </h3>
 <table>	
